...
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>

    <string name="title_activity_splash_screen_welcome">Interactive Scriptures Welcome</string>
    <string name="dummy_button">Begin the sound filled experience</string>
    <string name="dummy_content">Welcome.\n  Feel free to explore and examine communication through music:\n into the origin of \ncreation.</string>
    <string name="title_activity_scrolling_learning_sound">"Developer's interpretation of Part 1</string>
    <string name="large_text">
The first statements of Genesis is: "In the beginning, God created the heavens and the earth."

"When reading this text, one must remember, that Mose’s interpretation of Genesis is profound and detailed, but, limited by Mose’s time, humanity, language, and understanding of his world.   Mose’s thinking and analysis seeks to explain something far greater than any human can fully comprehend. In fact, humanity is still trying to understand Genesis or the beginning of creation.  Modern scientists
...
